<resources>
    <string name="app_name">运动人生</string>
    <string name="language" translatable="false">语文</string>
    <string name="math" translatable="false">数学</string>
    <string name="english" translatable="false">英语</string>
    <string name="category_network" translatable="false">无线和网络</string>
    <string name="category_device" translatable="false">设备</string>
    <string name="category_system" translatable="false">系统</string>
    <string name="image_description" translatable="false">An image from the list of results for a search query</string>
    <string name="giphy_logo_description" translatable="false">An animated version of the Giphy company logo</string>
    <string name="fullscreen_description" translatable="false">Full screen view of an image</string>
    <string name="name">姓名</string>
    <string name="sex">性别</string>
    <string name="age">年龄</string>
    <string name="desc">描述</string>
    <string name="change_data">更改数据</string>
    <string name="map_location" translatable="false">当前定位</string>
    <string name="map_marker" translatable="false">清除marker</string>
    <string name="map_search" translatable="false">附近搜索</string>
    <string name="map_change" translatable="false">地图切换</string>
    <string name="footer_scrolling_view_behavior" translatable="false">com.example.administrator.shadowapplication.material_design.FooterBehavior</string>
    <string-array name="custom_weekdays">
        <item>Su</item>
        <item>M</item>
        <item>Tu</item>
        <item>W</item>
        <item>Th</item>
        <item>F</item>
        <item>Sa</item>
    </string-array>
    <string-array name="custom_months">
        <item>JAN</item>
        <item>Feb</item>
        <item>MARCH</item>
        <item>April</item>
        <item>MAY</item>
        <item>June</item>
        <item>JULY</item>
        <item>Aug</item>
        <item>SEPT</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>DEC</item>
    </string-array>
    <string name="label_normal">Fitted for screen (common use)</string>
    <string name="label_small">Fitted for small layout parameters</string>
    <string name="label_medium">Tile size specified</string>
    <string name="label_thin">Tile width and height specified (thin)</string>
    <string name="label_wide">Tile width and height specified (wide)</string>
    <string name="today">Today is the day</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_basic">Basic Example</string>
    <string name="title_activity_disable">Disabled Days Example</string>
    <string name="title_activity_customize_xml">XML Customization Example</string>
    <string name="title_activity_customize_code">Programmatic Customization Example</string>
    <string name="title_activity_dynamic_setters">Dynamic Setters Test</string>
    <string name="title_activity_custom_tile_size">Custom tile width/height</string>
    <string name="title_activity_old_calendar">Old CalendarView</string>
    <string name="title_activity_dialogs">Calendar in Dialogs</string>
    <string name="title_activity_decorators">Calendar with Decorators</string>
    <string name="title_activity_basic_modes">Calendar with Dynamic Modes</string>
    <string name="title_activity_multiple_view">Multiple Basic Calendars</string>
    <string name="title_activity_multiple_size">Many-Sized Calendars</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="scale_up_show_behavior" translatable="false">com.example.administrator.shadowapplication.scrollview.BehaviorScrollview</string>
    <string name="network_unavailable">网络连接不可用，请检查网络</string>
    <string name="user_already_exists">用户已经存在</string>
    <string name="no_register_authority">无开放注册权限</string>
    <string name="illegal_user_name">用户名不合法</string>
    <string name="register_user_fail">注册失败!</string>
    <string name="network_unstable">网络不稳定</string>
    <string name="no_call_data">没有通话数据</string>
    <string name="The_other_party_refused_to_accept">对方拒绝接受！</string>
    <string name="Connection_failure">连接建立失败！</string>
    <string name="text_ack_msg">已读</string>
    <string name="text_delivered_msg">送达</string>
    <string name="button_send">发送</string>
    <string name="attach_location">位置</string>
    <string name="attach_short_cut_message">常用语</string>
    <string name="attach_call_video">发起视频</string>
    <string name="attach_evaluation">评价</string>
    <string name="location_message">发送位置</string>
    <string name="please_check">key检查出错!请在 AndroidManifest.xml 中检查key</string>
    <string name="text_fahuo">你们多久可以发货?</string>
    <string name="text_weight">这个我应该穿什么号的？我身高165，体重46kg</string>
    <string name="text_color">还有其他颜色的吗?</string>
    <string name="text_kuaidi">你们发的是什么快递?</string>
    <string name="unable_to_get_loaction">不能获取您的位置!</string>
    <string name="cant_find_pictures">找不到图片</string>
    <string name="system_is_regist">系统正在自动为您注册用户…</string>
    <string name="is_contact_customer">正在联系客服，请稍等…</string>
    <string name="is_contact_customer_failure_seconed">联系客服失败:</string>
    <string name="shopping">商城</string>
    <string name="conversation">会话</string>
    <string name="setting">设置</string>
    <string name="qrcode">扫描</string>
    <string name="qrcode_success">二维码扫描成功</string>
    <string name="qrcode_invalid">二维码无效</string>
    <string name="qrcode_fail">二维码扫描失败</string>
    <string name="qrcode_permission_fail">打开摄像头失败，请检查权限！</string>
    <string name="customernumber"> IM服务号</string>
    <string name="connect_customer"> 联系客服</string>
    <string name="feedback"> 意见反馈</string>
    <string name="history_record">历史记录</string>
    <string name="set_nick">设置昵称</string>
    <string name="set_tenantId">租户ID(TenantId)</string>
    <string name="set_leave_messageid">留言ID(projectId)</string>
    <string name="login_user_nick">登录用户昵称</string>
    <string name="customer_account">客服账号</string>
    <string name="appkey">AppKey</string>
    <string name="pop_pre_sales">售前客服</string>
    <string name="pop_after_sales">售后客服</string>
    <string name="leave_title">留言</string>
    <string name="leave_name">名字:</string>
    <string name="leave_phone">电话:</string>
    <string name="leave_email">邮箱:</string>
    <string name="leave_theme">主题:</string>
    <string name="leave_detail">详细信息</string>
    <string name="leave_content">输入留言</string>
    <string name="leave_sending">正在发送中…</string>
    <string name="delete_message">删除消息</string>
    <string name="copy_message">复制消息</string>
    <string name="delete_voice">删除语音</string>
    <string name="delete">删除</string>
    <string name="Making_sure_your_location">正在确定你的位置…</string>
    <string name="em_tip_wating">请稍等…</string>
    <string name="em_tip_request_fail">请求失败</string>
    <string name="title_satifisfaction_eval">满意度评价</string>
    <string name="nick_service">客服昵称</string>
    <string name="tip_eval">请对我的服务做出评价</string>
    <string name="hint_leave_message">留言</string>
    <string name="hint_input_evaluation">输入文字评价</string>
    <string name="tip_btn_sumbit">提交</string>
    <string name="tip_btn_evaluation">立即评价</string>
    <string name="empty_view_tip">暂无数据</string>
    <string name="audio_download_suc">语音下载成功</string>
    <string name="file_download_fail">文件下载失败</string>
    <string name="file_cannot_be_opened">文件无法打开</string>
    <string name="file_upload_fail">文件上传失败</string>
    <string name="login_user_noti">请先登录</string>
    <string name="comment_suc">评论成功</string>
    <string name="comment_fail">评论失败</string>
    <string name="file_uploading">文件上传中…</string>
    <string name="comment_content_not_null">评论内容不能为空</string>
    <string name="please_wait_noti">请等待…</string>
    <string name="send_suc">发送成功</string>
    <string name="app_key_cannot_be_empty">appkey不能为空, 设置失败!</string>
    <string name="cus_account_cannot_be_empty">IM服务号不能为空, 设置失败!</string>
    <string name="app_key_format_wrong">appkey格式不正确，设置失败!</string>
    <string name="app_key_modify_fail">修改appkey失败!</string>
    <string name="short_cut_msg">常用语</string>
    <string name="comment_load_fail">评论加载出错</string>
    <string name="note_detail">留言详情</string>
    <string name="note_reply">回复</string>
    <string name="note_id">留言ID:</string>
    <string name="note_subject">主题:</string>
    <string name="note_name">访客昵称:</string>
    <string name="note_content">内容:</string>
    <string name="note_phone">手机:</string>
    <string name="note_qq">QQ:</string>
    <string name="note_weibo">微博:</string>
    <string name="note_email">邮件:</string>
    <string name="note_responses">评论</string>
    <string name="new_comment_title">写评论</string>
    <string name="new_comment_send">发送</string>
    <string name="new_comment_hint">写评论…</string>
    <string name="new_comment_attach">添加附件</string>
    <string name="new_comment_talk">按住录音</string>
    <string name="The_other_is_not_online">对方不在线</string>
    <string name="Is_not_yet_connected_to_the_server">尚未连接至服务器</string>
    <string name="The_other_is_on_the_phone">对方正在通话中</string>
    <string name="can_not_connect_chat_server_connection">连接不到聊天服务器</string>
    <string name="not_connect_to_server">尚未连接至服务器，请稍后重试</string>
    <string name="Are_connected_to_each_other">正在连接对方……</string>
    <string name="have_connected_with">已经和对方建立连接，等待对方接受…</string>
    <string name="In_the_call">视频通话中…</string>
    <string name="The_other_party_is_not_online">对方不在线，请稍后再拨……</string>
    <string name="The_other_is_on_the_phone_please">对方正在通话中，请稍后再拨</string>
    <string name="The_other_party_did_not_answer">对方未接听</string>
    <string name="hang_up">挂断</string>
    <string name="The_other_is_hang_up">对方已经挂断</string>
    <string name="did_not_answer">未接听</string>
    <string name="Has_been_cancelled">已取消</string>
    <string name="Refused">已拒绝</string>
    <string name="call_version_inconsistent">通话协议版本不一致</string>
    <string name="hanging_up">挂断中…</string>
    <string name="answering">接受中…</string>
    <string name="tip_multi_video_calling">多人视频通话中…</string>
    <string name="tip_video_calling">正在通话中...(%d)</string>
    <string name="tip_video_in">收到视频通话...</string>
    <string name="setting_name">名字:</string>
    <string name="setting_org">组织:</string>
    <string name="setting_appname">应用名:</string>
    <string name="setting_number">号码:</string>
    <string name="setting_confirm">确认:</string>
    <string name="setting_status">状态:</string>
    <string name="setting_time">时间:</string>
    <string name="modify_save">保存</string>
    <string name="network_error">网络错误</string>
    <string name="file_download_title">文件下载</string>
    <string name="em_example1_text">古驰亮色夹克</string>
    <string name="em_example1_text_description">11月销量: 3399</string>
    <string name="em_example2_text">铂金女士手提袋</string>
    <string name="em_example2_text_description">11月销量: 20</string>
    <string name="em_example3_text">缪缪女士高跟鞋</string>
    <string name="em_example3_text_description">11月销量: 435</string>
    <string name="em_example4_text">卡地亚的一块手表</string>
    <string name="em_example4_text_description">11月销量:  10</string>
    <string name="em_notice_sending">发送中…</string>
    <string name="order_number">订单号</string>
    <string name="message_type_voice">[语音]</string>
    <string name="message_type_video">[视频]</string>
    <string name="message_type_location">[位置]</string>
    <string name="message_type_file">[文件]</string>
    <string name="message_type_image">[图片]</string>
    <string name="message_type_eval_request">[满意度邀请]</string>
    <string name="message_type_order_info">[订单消息]</string>
    <string name="message_type_visitor_track">[轨迹消息]</string>
    <string name="login_event">登录事件</string>
    <string name="register_event">注册事件</string>
    <string name="purchase_event">购买事件</string>
    <string name="browse_event">浏览事件</string>
    <string name="calculate_event">计算事件</string>
    <string name="count_event">计数事件</string>
</resources>