<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="handle"
            type="com.example.administrator.shadowapplication.map.databinding.MapDataVBindingHandlle" />

    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/common_back"
        android:orientation="vertical"
        tools:context="com.example.administrator.shadowapplication.map.MapActivity">

        <com.baidu.mapapi.map.MapView
            android:id="@+id/bmapView"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:clickable="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                style="@style/map_btn"
                android:onClick="@{() -> handle.location()}"
                android:text="@string/map_location" />

            <TextView
                style="@style/map_btn"
                android:onClick="@{() -> handle.addMarker()}"
                android:text="@string/map_marker" />

            <TextView
                style="@style/map_btn"
                android:onClick="@{() -> handle.mapChange()}"
                android:text="@string/map_change" />

            <TextView
                style="@style/map_btn"
                android:onClick="@{() -> handle.poiSearch()}"
                android:text="@string/map_search" />
        </LinearLayout>

    </LinearLayout>
</layout>
